syntax = "proto3";
package peer.pb;

message PeerRecord {
    message AddressInfo {
        bytes multiaddr = 1;
    }

    bytes peerId = 1;
    uint64 seq = 2;
    repeated AddressInfo addresses = 3;
}
